# spot-perception-stack

./: .coverage  .gitignore  README.md  pyproject.toml
docs/: development.md  nodes_and_pipelines.md  overview.md
scripts/: bbox_to_3d_points.py  create_sample_data.py  generate_object_pointclouds.py  interactive_dedup_viewer.py  object_library.py  visualize_library.py  visualize_scene_w_bboxes.py  yolo_world_detection_vlm_vocab.py  yolo_world_detection_vocab_list.py
src/: __init__.py  obs_data_buffer.py
src/perception_pipeline/: __init__.py  ai_models.py  point_cloud.py  reporting.py  run_pipeline.py
src/utils/: bbox_utils.py  func_utils.py  plotters.py  ros_utils.py  session_logger.py
src/vision_grounding/: deduplicate_objects_by_label.py  deduplicate_objects_by_label_individual.py  fast_sam_helper2.py  object_detection_pipeline.py  obs_data_buffer.py  pcd_coverage.py  sam_3_helper.py  sam_3_text_helper.py  vlm_interface.py  z_sensor_object_map_node.py
src/vision_grounding/playground/: fast_sam_helper.py  object_candidate_selection.py  rex_play.py  sam_3_text_helper2.py
src_perception/components/: batch_sam.py  generate_object_pointclouds.py  pcd_coverage.py  point_cloud.py  vlm_interface.py
src_perception/perception_pipeline/: log_manager.py  visualization.py
tests/: test_ai_models.py  test_benchmarks.py  test_e2e_pipeline.py  test_integration_pipeline.py  test_log_manager.py  test_mask_pc_coverages_check.py  test_mask_pointcloud.py  test_obs_data_buffer.py  test_point_cloud.py  test_reporting.py  test_visualization.py
(+8 files in other folders)
